--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "npx serve -s dist -l 3000"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -23,6 +24,7 @@
     "react-i18next": "^16.3.5",
     "react-router-dom": "^6.21.1",
     "recharts": "^2.10.3",
+    "serve": "^14.2.1",
     "sonner": "^1.3.1",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
