--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "npx serve -s dist -l 3000"
+    "start": "npx serve -s dist"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
