Configure frontend to use Dockerfile with nginx in Railway

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 
 # Build arguments for environment variables
 ARG VITE_API_URL
-ENV VITE_API_URL=$VITE_API_URL
+ENV VITE_API_URL=${VITE_API_URL:-http://localhost:3000/api/v1}
 
 # Copy package files
 COPY package*.json ./
