--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -9,15 +9,22 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/logos/brikio-logo.png",
-      "sizes": "any",
+      "src": "/icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icons/icon-512.png",
+      "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
       "src": "/favicon.png",
-      "sizes": "64x64",
-      "type": "image/png"
+      "sizes": "180x180",
+      "type": "image/png",
+      "purpose": "any"
     }
   ],
   "categories": ["business", "productivity", "utilities"],
