--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "handlebars": "^4.7.8",
     "helmet": "^7.1.0",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
@@ -57,6 +58,7 @@
     "@types/compression": "^1.8.1",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.6",
+    "@types/passport-google-oauth20": "^2.0.17",
     "@types/passport-jwt": "^4.0.0",
     "@types/passport-local": "^1.0.38",
     "@types/uuid": "^9.0.7",
