--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,9 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-i18next": "^16.3.5",
+    "react-joyride": "^2.9.3",
     "react-router-dom": "^6.21.1",
+    "react-tooltip": "^5.30.0",
     "recharts": "^2.10.3",
     "serve": "^14.2.1",
     "sonner": "^1.3.1",
