--- a/backend/package.json
+++ b/backend/package.json
@@ -31,17 +31,21 @@
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/throttler": "^5.1.1",
     "@nestjs/typeorm": "^10.0.1",
+    "@types/pdfkit": "^0.17.3",
+    "axios": "^1.13.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "compression": "^1.7.4",
     "date-fns": "^3.0.6",
+    "docx": "^9.5.1",
     "handlebars": "^4.7.8",
     "helmet": "^7.1.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pdfkit": "^0.17.2",
     "pg": "^8.11.3",
     "puppeteer": "^21.7.0",
     "reflect-metadata": "^0.2.1",
